infra/k8s/ingress/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    #Cloud Configuration
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: project-id-static-ip
    networking.gke.io/managed-certificates: project-id-certificate
spec:
  rules:
    - host: domainname.com
      http:
        paths:
          - path: /api/v1/servicename/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: servicename-srv
                port:
                  number: 3000

          - path: /api/v1/servicename2/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: servicename2-srv
                port:
                  number: 3000
